--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "strict": true
-  }
+    "strict": true,
+    "sourceMap": true
+  },
+  "include": [
+    "src/**/*"
+  ],
 }
