--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ script:
  - yarn build
  - yarn test
 deploy:
- - provider: npm
- - email: "tylertracy1999@gmail.com"
- - api_key: $NPM_AUTH
- - on:
+  provider: npm
+  email: "tylertracy1999@gmail.com"
+  api_key: "$NPM_AUTH"
+  on:
     branch: master
