--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/main.js",
     "start:dev": "tsc -w",
     "build": "tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover dist/main.js",
+    "cover:test": "nyc --check-coverage --lines 100 npm test"
   },
   "repository": {
     "type": "git",
@@ -27,14 +29,17 @@
   },
   "homepage": "https://github.com/tylerthecoder/Recreational_Math#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.119",
+    "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
     "jasmine": "^3.1.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.2.2",
-    "@types/lodash": "^4.14.119",
-    "chai": "^4.2.0"
+    "typescript": "^3.2.2"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "lodash": "^4.17.11"
   }
 }
