--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
  - yarn install
 script:
  - yarn build
- - yarn test
+ - yarn cover
 deploy:
   provider: npm
   email: "tylertracy1999@gmail.com"
