--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "recnum",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A way to do cool math",
   "main": "dist/main.js",
   "scripts": {
     "start": "node dist/main.js",
-    "start:dev": "tsc -w",
+    "start:dev": "yarn install && tsc -w",
     "build": "tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "nyc --check-coverage --lines 100 npm test",
+    "cover:report": "nyc report --reporter=lcov"
   },
   "repository": {
     "type": "git",
@@ -27,14 +29,16 @@
   },
   "homepage": "https://github.com/tylerthecoder/Recreational_Math#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.119",
+    "chai": "^4.2.0",
     "jasmine": "^3.1.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.2.2",
-    "@types/lodash": "^4.14.119",
-    "chai": "^4.2.0"
+    "typescript": "^3.2.2"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "lodash": "^4.17.11"
   }
 }
